crates/squawk_linter/src/rules/snapshots/squawk_linter__rules__adding_field_with_default__test__default_volatile_func_err.snap
---
source: crates/squawk_linter/src/rules/adding_field_with_default.rs
expression: "lint_errors(sql, Rule::AddingFieldWithDefault)"
---
error[AddingFieldWithDefault]: Adding a generated column requires a table rewrite with an `ACCESS EXCLUSIVE` lock. In Postgres versions 11+, non-VOLATILE DEFAULTs can be added without a rewrite.
  ╭▸ 
3 │ ALTER TABLE "core_recipe" ADD COLUMN "foo" boolean DEFAULT random();
  │                                                            ━━━━━━━━
  │
  ╰ help: Add the column as nullable, backfill existing rows, and add a trigger to update the column on write instead.
